# quine-mccluskey

./: .gitignore  CMakeLists.txt  fuzz.py  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: codeql.yml  pip.yml  python-package.yml  python-publish.yml  wheels.yml
built_wheel/: quine_mccluskey_tomas789-0.2.3.dev32+g291ea8c.d20221210-cp311-cp311-macosx_13_0_arm64.whl
quine_mccluskey_tomas789/: __init__.py  qm.py
src_cpp/: qmc.cpp
