[build-system]
requires = [
    "setuptools>=45",
    "setuptools_scm[toml]>=6.2",
    "wheel",
    "ninja",
    "cmake>=3.12",
]
build-backend = "setuptools.build_meta"

[project]
name = "quine_mccluskey_tomas789"
# version = "0.0.1"  # Remove any existing version parameter.
dynamic = ["version"]


[tool.setuptools_scm]
write_to = "quine_mccluskey_tomas789/_version.py"

[tool.pylint]
max-line-length = 127
ignore = "_version.py"
disable = [
    "invalid-name", 
    "too-many-nested-blocks", 
    "too-many-locals", 
    "dangerous-default-value",
    "too-many-branches", 
    "too-many-statements",
    "too-few-public-methods"
]

[tool.distutils.bdist_wheel]
universal = true

[tool.pyright]

[tool.flake8]
max-line-length = 127

[tool.black]
line-length = 127
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"

[tool.cibuildwheel]
test-command = "pytest {project}/tests"
test-extras = ["test"]
test-skip = ["*universal2:arm64"]
# Setuptools bug causes collision between pypy and cpython artifacts


skip = "*-win32 *-musllinux_x86_64 *i686*"
build = "cp3*"


[tool.cibuildwheel.linux]
archs = ["auto", "aarch64"]
before-build = "rm -rf {project}/build"

[tool.cibuildwheel.macos]
before-build = "rm -rf {project}/build"

# Use delvewheel on windows
[tool.cibuildwheel.windows]
before-build = [
    "pip install delvewheel",
    "if exist build rmdir /s /q build",
]
repair-wheel-command = "delvewheel repair -w {dest_dir} {wheel}"
